--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback Form</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
 
@@ -25,6 +25,6 @@
       <button type="submit">Submit</button>
     </form>
 
-    <script type="module" src="js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
