--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
 
         <nav>
           <ul>
-            <li><a href="1-gallery.html">Завдання 1: Галерея зображень</a></li>
-            <li><a href="2-form.html">Завдання 2: Форма зворотного зв'язку</a></li>
+            <li><a href="./1-gallery.html">Завдання 1: Галерея зображень</a></li>
+            <li><a href="./2-form.html">Завдання 2: Форма зворотного зв'язку</a></li>
           </ul>
         </nav>
       </div>
